# sonic-manager

./: .zuul.yaml  README.md  pyproject.toml  requirements.txt
sonic_manager/: settings.toml
sonic_manager/cli/: __init__.py  main.py
sonic_manager/core/: __init__.py  config.py  netbox_client.py  netbox_compatibility.py  utils.py
sonic_manager/port_config/: __init__.py
sonic_manager/sonic/: __init__.py  bgp.py  cache.py  config_generator.py  connections.py  constants.py  device.py  exporter.py  interface.py  sync.py
